AC_INIT(Makefile.in)

dnl This ksh/zsh feature conflicts with `cd blah ; pwd`
unset CDPATH

AC_PROG_CXX

AC_PREFIX_DEFAULT(/usr/local/)

AC_CONFIG_HEADER(config.h)


dnl Compiler flags
AC_MSG_CHECKING(Include debugging?)
AC_ARG_ENABLE(debug,
        [  --enable-debug         Output debuggging info],
        [case "$enableval" in
                yes)
                        AC_MSG_RESULT(yes)
                        CFLAGS="$CFLAGS -DDEBUG -g"
                        ;;
                *)
                        AC_MSG_RESULT(no)
                        CFLAGS="$CFLAGS -O2"
                        ;;
        esac],
        [AC_MSG_RESULT(no)
        CFLAGS="$CFLAGS -O2"]
)



AC_ARG_WITH(scanner, [  --with-scanner=libclamav      Virus Scanner Clamav, F-Prot, Trophie or Kaspersky (libclamav, fprot, trophie or aveclient)], HAVPSCANNER_DEF="$withval", HAVPSCANNER_DEF="libclamav")

if test $HAVPSCANNER_DEF = aveclient ; then
 SCANNEROBJECT=kasperskyscanner.o
 SCANNER=1
 SCANNERLIB=
else
   if test $HAVPSCANNER_DEF = fprot ; then
    SCANNEROBJECT=f-protscanner.o
    SCANNER=2
    SCANNERLIB=
   else
     if test $HAVPSCANNER_DEF = trophie ; then
       SCANNEROBJECT=trophiescanner.o
       SCANNER=3
       SCANNERLIB="-lvsapi"
     else
       SCANNEROBJECT=clamlibscanner.o
      SCANNER=0
      CFLAGS="$CFLAGS `clamav-config --cflags`"
      SCANNERLIB="`clamav-config --libs ` -lclamav"
    fi
   fi
fi

AC_SUBST(SCANNER)
AC_SUBST(SCANNEROBJECT)
AC_SUBST(SCANNERLIB)

AC_SUBST(CFLAGS)

AC_OUTPUT(Makefile havp/Makefile havp/default.h)
AC_OUTPUT

dnl touch some sourcefiles which sould compiled after configure
touch havp/havp.cpp
touch havp/params.cpp


if test "$all_tests" = "bad"; then
  if test ! "$cache_file" = "/dev/null"; then
    echo ""    
    echo "Please remove the file $cache_file after changing your setup"
    echo "so that configure will find the changes next time."
    echo ""
  fi
else
  echo ""
  echo "Good - your configure finished. Start make now"
  echo ""
fi

