AC_INIT(Makefile.in)

dnl This ksh/zsh feature conflicts with `cd blah ; pwd`
unset CDPATH

AC_PROG_CXX

AC_PREFIX_DEFAULT(/usr/local/)

AC_CONFIG_HEADER(config.h)


dnl Compiler flags
AC_MSG_CHECKING(Include debugging?)
AC_ARG_ENABLE(debug,
        [  --enable-debug         Output debuggging info],
        [case "$enableval" in
                yes)
                        AC_MSG_RESULT(yes)
                        CFLAGS="$CFLAGS -DDEBUG -g"
                        ;;
                *)
                        AC_MSG_RESULT(no)
                        CFLAGS="$CFLAGS -O2"
                        ;;
        esac],
        [AC_MSG_RESULT(no)
        CFLAGS="$CFLAGS -O2"]
)




case "`uname`" in
SunOS*)
     LDFLAGS="$LDFLAGS -lsocket -lresolv -lnsl"
    ;;
esac





AC_ARG_ENABLE(ssl-tunnel,[  --enable-ssl-tunnel      HTTPS traffic will NOT scanned], want_ssltunnel=$enableval, want_ssltunnel="no")

if test "$want_ssltunnel" = "yes"
then
    AC_DEFINE(SSLTUNNEL, "1", [with ssltunnel])
fi



AC_ARG_WITH(scanner, [  --with-scanner=libclamav      Virus Scanner Clamav, F-Prot, Trophie or Kaspersky (libclamav, fprot, trophie, aveserver, avg)], HAVPSCANNER_DEF="$withval", HAVPSCANNER_DEF="libclamav")

if test $HAVPSCANNER_DEF = aveserver ; then
 SCANNEROBJECT=kasperskyscanner.o
 SCANNER=1
 SCANNERLIB=
else
   if test $HAVPSCANNER_DEF = fprot ; then
    SCANNEROBJECT=f-protscanner.o
    SCANNER=2
    SCANNERLIB=
   else
     if test $HAVPSCANNER_DEF = trophie ; then
       SCANNEROBJECT=trophiescanner.o
       SCANNER=3
       SCANNERLIB="-L/etc/iscan -lvsapi"
     else
       if test $HAVPSCANNER_DEF = avg ; then
         SCANNEROBJECT=avgscanner.o
         SCANNER=4
         SCANNERLIB=
       else
         SCANNEROBJECT=clamlibscanner.o
         SCANNER=0
         CFLAGS="$CFLAGS `clamav-config --cflags`"
         SCANNERLIB="`clamav-config --libs ` -lclamav"
       fi
     fi
   fi
fi

AC_SUBST(SCANNER)
AC_SUBST(SCANNEROBJECT)
AC_SUBST(SCANNERLIB)

AC_SUBST(CFLAGS)

AC_OUTPUT(Makefile havp/Makefile havp/default.h)
AC_OUTPUT

dnl touch some sourcefiles which sould compiled after configure
touch havp/havp.cpp
touch havp/params.cpp


if test "$all_tests" = "bad"; then
  if test ! "$cache_file" = "/dev/null"; then
    echo ""    
    echo "Please remove the file $cache_file after changing your setup"
    echo "so that configure will find the changes next time."
    echo ""
  fi
else
  echo ""
  echo "Good - your configure finished. Start make now"
  echo ""
fi

